--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,19 +2,25 @@ name: CI Demo
 on: push
 jobs:
     lint:
-        runs-on: ubuntu-latest
+        runs-on: ${{matrix.os}}
+        
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest, macos-latest]
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
 
             - name: Setup Python
               uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
 
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
                 pip install flake8
-                
+
             - name: Run flake8
               run: |
                 flake8 example.py
