--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,6 +7,7 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
+                python-version: ['3.9','3.10','3.11']
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -14,7 +15,7 @@ jobs:
             - name: Setup Python
               uses: actions/setup-python@v4
               with:
-                python-version: '3.10'
+                python-version: ${{matrix.python-version}}
 
             - name: Install dependencies
               run: |
