--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,5 +1,10 @@
 name: CI Demo
-on: push
+on:
+    push:
+        branches:
+            - master
+    pull-request:
+        
 jobs:
     lint:
         runs-on: ${{matrix.os}}
