--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,9 +2,9 @@ name: CI Demo
 on:
     push:
         branches:
-            - master
+            - main
     pull-request:
-        
+
 jobs:
     lint:
         runs-on: ${{matrix.os}}
