--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,3 +30,17 @@ jobs:
             - name: Run flake8
               run: |
                 flake8 example.py
+    unit_test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Code checkout
+              uses: actions/checkout@v4
+
+            - name: Python code
+              uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
+            - name: run unit test
+              run: |
+                python -m unittest discover
+              
