--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -31,6 +31,7 @@ jobs:
               run: |
                 flake8 example.py
     unit_test:
+        needs: lint
         runs-on: ubuntu-latest
         steps:
             - name: Code checkout
